--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,10 +6,8 @@
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  left:0;
-  right:0;
   width: 100%;
 }
 
