--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -1,9 +1,9 @@
 .top-div {
-  margin-top: 150px;
+  margin-top: 120px;
 }
 
 .register-section {
-  width: 320px;
+  width: 300px;
   margin: auto;
   border: 0.5px solid rgb(107, 107, 107);
   border-radius: 5px;
@@ -41,7 +41,7 @@
 }
 
 .register-buttons {
-  width: 319.6px;
+  width: 299.6px;
   height: 70px;
   margin-top: 1em;
   background-color: #392061;
@@ -80,4 +80,13 @@
 .show-span {
   margin-left: 0.5em;
   font-size: 14px;
+}
+
+@media only screen and (min-width: 400px) {
+  .register-section {
+    width: 320px;
+  }
+  .register-buttons {
+    width: 319.6px;
+  }
 }
