--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -38,6 +38,7 @@
   height: 25px;
   border: 0.5px solid rgb(204, 204, 204);
   margin-bottom: 0.8em;
+  padding-left: 0.2em;
 }
 
 .register-buttons {
@@ -80,6 +81,19 @@
 .show-span {
   margin-left: 0.5em;
   font-size: 14px;
+  cursor: pointer;
+}
+
+.password-div {
+  position: relative;
+}
+
+.password-good {
+  position: absolute;
+  top: 4px;
+  padding-left: 5px;
+  color: rgb(30, 189, 30);
+  font-weight: bold;
 }
 
 @media only screen and (min-width: 400px) {
