added scroll to top button on landing page

--- a/src/Components/GeneralCheckList/GeneralCheckList.css
+++ b/src/Components/GeneralCheckList/GeneralCheckList.css
@@ -51,7 +51,7 @@
 .event-direct {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  color: rgb(163, 70, 163);;
+  color: rgb(163, 70, 163);
   background-color: white;
 }
 
