--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -29,6 +29,11 @@
   text-decoration: none;
   font-size: 20px;
   margin-left: 0.3em;
+  transition: all 0.3s ease 0s;
+}
+
+.nav-title:hover {
+  color: rgb(129, 22, 129);
 }
 
 .nav {
