--- a/src/Components/Items/Items.css
+++ b/src/Components/Items/Items.css
@@ -69,6 +69,10 @@
   flex-basis: 5%;
 }
 
+/* .test {
+  margin: auto 0 0.3em 0;
+} */
+
 .add-item-button {
   color: rgb(43, 184, 36);
   font-size: 20px;
