Minor styling changes. autocomplete off on forms, except few

--- a/src/Components/GeneralCheckList/GeneralCheckList.css
+++ b/src/Components/GeneralCheckList/GeneralCheckList.css
@@ -45,7 +45,7 @@
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   color: white;
-  background-color: rgb(163, 70, 163);;
+  background-color: rgb(163, 70, 163);
 }
 
 .event-direct {
