--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -66,7 +66,7 @@
 .hamburger {
   color: white;
   height: 60px;
-  line-height: 60px;
+  line-height: 59.5px;
   width: 19px;
   margin-right: 1em;
 }
@@ -114,8 +114,8 @@
 }
 
 .appnav-li-first {
-  border-top: 1px solid rgb(129, 22, 129);
-  border-top-left-radius: 5px;
+  border-top: 0.1px solid rgb(129, 22, 129);
+  /* border-top-left-radius: 5px; */
 }
 
 .appnav-li-last {
@@ -168,7 +168,7 @@
   #dropdown-li {
     display: inline-block;
     height: 60px;
-    line-height: 60px;
+    line-height: 59.5px;
   }
 
   .dropbtn {
@@ -194,7 +194,7 @@
     display: none;
     position: absolute;
     right: 1px;
-    border: 1px solid rgb(129, 22, 129);;
+    border: 1px solid rgb(129, 22, 129);
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     background-color: white;
