--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -97,6 +97,15 @@
   font-size: 17.5px;
 }
 
+.demo-div {
+  margin-top: 3em;
+}
+
+.demo-p {
+  margin: 0;
+  margin-top: 5px;
+}
+
 @media only screen and (min-width: 400px) {
   .login-section {
     width: 320px;
